--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ BG - #202020
 TEXT - #9aa5aa
 */
 :root {
-  --main-bg: #202020;
-  --main-color: #9aa5aa;
+  --main-bg: #fff;
+  --main-color: #111;
   --main-size: 70vw;
   --primary: #f3a421;
 }
@@ -33,8 +33,10 @@ body {
 
 header {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(470px, 1fr));
-  transform: translateX(-50px);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 1rem;
+  justify-content: center;
+  transform: translateX(-100px);
 }
 
 .photo {
@@ -109,8 +111,8 @@ main {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 3px;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  gap: 2rem;
 }
 
 .project {
@@ -127,17 +129,26 @@ main {
 .project:nth-child(2) {
   background: url(../assets/project_2.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .project:nth-child(3) {
   background: url(../assets/project_3.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .project:nth-child(4) {
   background: url(../assets/project_4.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.project:nth-child(5) {
+  background: url(../assets/project_5.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .project:nth-child(3) {
   background-color: rgb(58, 58, 58);
@@ -199,7 +210,12 @@ footer {
   color: var(--primary);
   transition: all 500ms ease;
 }
-
+@media screen and (max-width: 1289px) {
+  header {
+    transform: translateX(-20px);
+    margin-top: 1rem;
+  }
+}
 @media screen and (max-width: 873px) {
   :root {
     --main-size: 80vw;
@@ -218,8 +234,8 @@ footer {
   }
 
   .photo {
-    width: 60%;
-    height: 250px;
+    width: 50%;
+    height: 200px;
     border-radius: 50%;
     background-size: cover;
     margin: 0 auto;
