--- a/css/theme.css
+++ b/css/theme.css
@@ -22,7 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #4a4a4a;
+  background-color: #f3a421;
   -webkit-transition: 0.4s;
   transition: 0.4s;
   z-index: 10;
@@ -41,11 +41,11 @@
 }
 
 input:checked + .slider {
-  background-color: #f3a421;
+  background-color: #4a4a4a;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #f3a421;
+  box-shadow: 0 0 1px #4a4a4a;
 }
 
 input:checked + .slider:before {
