--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,12 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.project:nth-child(6) {
+  background: url(../assets/project_6.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .project:nth-child(3) {
   background-color: rgb(58, 58, 58);
 }
@@ -165,6 +171,7 @@ main {
   background-color: rgba(12, 10, 10, 0.712);
   color: #eee;
   line-height: 180%;
+  padding: 0 1rem;
 }
 
 .buttons {
